Fixing selector bug for dark mode button

--- a/css/style.css
+++ b/css/style.css
@@ -1124,7 +1124,7 @@ body > nav > div.speech > div.social-links > div > * {
   color: var(--clr-txt-2);
 }
 
-body > button.__dark {
+button.__dark {
   position: fixed;
   top: 5.5%;
   left: 3.5%;
@@ -1140,11 +1140,11 @@ body > button.__dark {
   border: 3px solid var(--clr-txt-1);
 }
 
-body > button.__dark > .fi {
+button.__dark > .fi {
   transform: translateY(.15rem);
 }
 
-body > button.__dark:hover {
+button.__dark:hover {
   cursor: pointer;
 }
 
@@ -2193,7 +2193,7 @@ body > button.__dark:hover {
   }
   /* Dark Mode */
 
-  body > button.__dark {
+  button.__dark {
     top: 1%;
     left: 1%;
   }
@@ -2651,7 +2651,7 @@ body > button.__dark:hover {
 
   /* Dark Mode */
 
-  body > button.__dark {
+  button.__dark {
     top: 1%;
     left: 2%;
   }
